apps/production/portfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "e859d444-74bb-4e45-8426-1e6141995ed9.cfargotunnel.com"
    external-dns.kubernetes.io/target: "e859d444-74bb-4e45-8426-1e6141995ed9.cfargotunnel.com"
  name: portfolio
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - dariomazza.net             
      secretName: portfolio-prod-tls
  rules:
  - host: dariomazza.net
    http:
      paths:
      - backend:
          service:
            name: portfolio
            port:
              number: 80
        path: /
        pathType: Prefix
